--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">3D Modeling</h5>
+                <h5 class="h5">2D Modeling</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -640,20 +640,20 @@
               </div>
 
             </li>
-
-            <!-- <li class="skills-item">
+            <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Data saints</h5>
-                <data value="0">0%</data>
+                <h5 class="h5">3D Metavers</h5>
+                <data value="20">20%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 0%;"></div>
+                <div class="skill-progress-fill" style="width: 20%;"></div>
               </div>
 
-            </li> -->
+            </li>
 
+        
           </ul>
 
         </section>
