--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
                 <p class="service-item-text">
                   software yang saya kuasai yaitu construct 3, Arduino dan phaser.
-                  tugas pemrogaman yang saya pakai yaitu JavaScript, html5, dan css
+                  kode pemrogaman yang saya pakai yaitu JavaScript, html5, dan css
                 </p>
               </div>
 
