--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 
   <!--
-    - google font link
+    - google font link  
   -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -804,7 +804,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="3D Modeling">
+            <li class="project-item  active" data-filter-item data-category="Web Development">
               <a href="#">
 
                 <figure class="project-img">
@@ -818,6 +818,24 @@
                 <h3 class="project-title">Stasiun Ruang angkasa</h3>
 
                 <p class="project-category">Web Development</p>
+
+              </a>
+            </li> 
+
+            <li class="project-item  active" data-filter-item data-category="3D Modeling">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/tuguuuu jogja.png"alt=dsm." loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Tugu Yogyakarta</h3>
+
+                <p class="project-category">3D Modeling</p>
 
               </a>
             </li> 
@@ -875,6 +893,7 @@
 
               </a>
             </li>
+            
 
            
 
